<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#171717"
    android:backgroundTint="#ABB5BF"
    android:orientation="vertical">

    <TextView
        android:id="@+id/num1_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_first"
        android:textColor="#F44336"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/num1_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="12"
        android:inputType="number" />

    <TextView
        android:id="@+id/operation_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#00BCD4"
        android:text="@string/input_operation"
        android:textColor="#C2185B"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/operation_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="12"
        android:inputType="text" />

    <TextView
        android:id="@+id/num2_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_second"
        android:textColor="#388E3C"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/num2_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="12"
        android:inputType="number" />

    <Button
        android:id="@+id/calculate_result_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="22sp"
        android:textStyle="bold"/>


</LinearLayout>